Fixed some layout issues in the upload property dialog.

--- a/src-gwt/org/opencms/ade/postupload/client/ui/css/dialog.css
+++ b/src-gwt/org/opencms/ade/postupload/client/ui/css/dialog.css
@@ -3,10 +3,8 @@
 .propertyDialog {
     overflow: auto;
     position: relative;
-	/** Set this value to restrict the height of the dialog popup:
-		max-height: 395px;
-		padding-right: 5px;
-	*/
+	max-height: 370px;
+	padding-right: 5px;
 }
 
 .popupOverlay {
